<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project>
    <developers>
        <developer>
            <name>Peter Verhas</name>
            <email>peter@verhas.com</email>
        </developer>
    </developers>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>ch.turic</groupId>
                <artifactId>core</artifactId>
                <version>0.0.1</version>
            </dependency>
            <dependency>
                <groupId>ch.turic</groupId>
                <artifactId>maven</artifactId>
                <version>0.0.1</version>
            </dependency>
            <dependency>
                <groupId>ch.turic</groupId>
                <artifactId>cli</artifactId>
                <version>0.0.1</version>
            </dependency>
            <dependency>
                <scope>test</scope>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>5.13.0-M2</version>
            </dependency>
            <dependency>
                <scope>test</scope>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>5.13.0-M2</version>
            </dependency>
            <dependency>
                <scope>test</scope>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-params</artifactId>
                <version>5.13.0-M2</version>
            </dependency>
            <dependency>
                <scope>test</scope>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>5.17.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <modelVersion>4.0.0</modelVersion>
    <groupId>ch.turic</groupId>
    <profiles>
        <profile>
            <build>
                <plugins>
                    <plugin>
                        <executions>
                            <execution>
                                <phase>verify</phase>
                                <id>sign-artifacts</id>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                    </plugin>
                    <plugin>
                        <extensions>true</extensions>
                        <configuration>
                            <autoPublish>true</autoPublish>
                            <publishingServerId>central</publishingServerId>
                        </configuration>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
            <id>release</id>
        </profile>
    </profiles>
    <description>Turicum programming language</description>
    <packaging>pom</packaging>
    <version>0.0.1</version>
    <modules>
        <module>core</module>
        <module>maven</module>
        <module>cli</module>
    </modules>
    <url>https:/github.com/verhas/turicum</url>
    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.3.1</version>
                </plugin>
                <plugin>
                    <configuration>
                        <archive>
                            <manifest>
                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                            </manifest>
                        </archive>
                    </configuration>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.4.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.7.1</version>
                </plugin>
                <plugin>
                    <executions>
                        <execution>
                            <id>attach-javadoc</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.11.2</version>
                </plugin>
                <plugin>
                    <configuration>
                        <release>21</release>
                        <source>21</source>
                        <encoding>UTF-8</encoding>
                        <target>21</target>
                    </configuration>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                </plugin>
                <plugin>
                    <configuration>
                        <encoding>UTF-8</encoding>
                    </configuration>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.3.1</version>
                </plugin>
                <plugin>
                    <executions>
                        <execution>
                            <id>collect</id>
                            <goals>
                                <goal>collect</goal>
                            </goals>
                        </execution>
                    </executions>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>3.8.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.3</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-gpg-plugin</artifactId>
                    <version>3.2.7</version>
                </plugin>
                <plugin>
                    <extensions>true</extensions>
                    <configuration>
                        <autoPublish>true</autoPublish>
                        <publishingServerId>central</publishingServerId>
                    </configuration>
                    <groupId>org.sonatype.central</groupId>
                    <artifactId>central-publishing-maven-plugin</artifactId>
                    <version>0.7.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <name>ch.turic:turicum-parent</name>
    <artifactId>turicum-parent</artifactId>
    <scm>
        <connection>scm:git:git://github.com/verhas/turicum.git</connection>
        <url>https:/github.com/verhas/turicum</url>
        <developerConnection>scm:git:ssh://github.com/verhas/turicum.git</developerConnection>
    </scm>
    <properties>
        <maven.plugin.validation>VERBOSE</maven.plugin.validation>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
</project>
